Name:           safe-failure
Build-Type:     Simple
Version:        0.2
License:        BSD3
License-File:   LICENSE
Copyright:      2007-8, Neil Mitchell
Maintainer:     pepeiborra@gmail.com
Author:         Neil Mitchell, Jose Iborra (2009), Michael Snoyman (2009)
Homepage:       http://www-users.cs.york.ac.uk/~ndm/safe/
Build-Depends:  base >= 4, control-monad-failure
Category:       Unclassified
Synopsis:       Library for safe (pattern match free) functions
Description:
    Partial functions from the base library, such as @head@ and @!!@, modified
    to fail in a @MonadFail@ monad.
    
    These functions can be used to reduce the number of unsafe pattern matches in
    your code.
Exposed-modules:
	Safe.Failure
ghc-options: -Wall